# static_lib

./: CMakeLists.txt  Dockerfile  README.md
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
include/: hello.hpp
src/: hello.cpp  main.cpp
test/: CMakeLists.txt
